[project]
name = "cellpose-kit"
version = "0.2.1"
description = "Wrapper function around cellpose. Will detect the version and load the appropriate backend implementation"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "packaging>=25.0",
]

[project.scripts]
cellpose-kit = "cellpose_kit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
